--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     height: 100vh;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 20px;
-    background: linear-gradient(to bottom, #1b007c, #3500f3, #00bad2);
+    background: linear-gradient(to bottom, #2a00c2, #3500f3, #00bad2);
 
     background-attachment: fixed;
 }
@@ -13,12 +13,19 @@ hr {
     width: 30%;
     height: 3px;
     border-radius: 5px;
-    background:radial-gradient(circle, #30bad2, transparent);
+    background: radial-gradient(circle, #30bad2, transparent);
     border: none;
+    text-shadow: 0 0 25px rgb(1, 255, 234);
+
 }
 
 h1 {
-    margin-bottom: 100px;
+    font-size: 60px;
+    text-shadow: 0 0 25px rgb(1, 255, 234);
+}
+
+p {
+    text-shadow: 0 0 15px rgb(1, 255, 234);
 }
 
 .cartoes {
@@ -63,9 +70,10 @@ h1 {
 }
 
 .letra {
-    font-size: 25px;
+    font-size: 40px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
+    text-shadow: 0 0 25px rgb(1, 255, 234);
 
 }
 
