--- a/style.css
+++ b/style.css
@@ -20,12 +20,12 @@ hr {
 }
 
 h1 {
-    font-size: 60px;
-    text-shadow: 0 0 25px rgb(1, 255, 234);
+    font-size: 90px;
+    text-shadow: 0 0 50px rgb(1, 255, 234);
 }
 
 p {
-    text-shadow: 0 0 15px rgb(1, 255, 234);
+    text-shadow: 0 0 38px rgba(1, 255, 234, 0.429);
 }
 
 .cartoes {
@@ -73,7 +73,7 @@ p {
     font-size: 40px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
-    text-shadow: 0 0 25px rgb(1, 255, 234);
+    text-shadow: 0 0 30px rgb(1, 255, 234);
 
 }
 
